--- a/templates/register.html
+++ b/templates/register.html
@@ -20,8 +20,9 @@
     <input class="form-control form-group" name="confirmation" placeholder="Confirmation" type="password" required>
     <button class="btn btn-primary" type="submit">Register</button>
 </form>
+<br>
 <p style="margin-top: 8px;">
-    Password must be at least 8 characters long. Although they are stored with industry-grade
+    Your password must be at least 8 characters long. Although they are stored with industry-grade
     encryption and nobody can see them even if they gain access to the users database, we strongly
     recommend you not to use a password you use elsewhere.<br><br>
     You must provide a valid email account to register on our side. By registering, you acknowledge that you have read our <a href="/privacy">privacy policy</a> and agree to abide by our <a href="/terms">terms of service</a>.
