--- a/templates/layout.html
+++ b/templates/layout.html
@@ -60,5 +60,6 @@
         <footer>
             <p class="text-center">© 2020, MGCI CTF Club. Source code available <a href="https://github.com/jdabtieu/CTFOJ">here</a>.</p>
         </footer>
+        <script src="/static/dateconvert.js"></script>
     </body>
 </html>
