--- a/templates/contest/contest_problem.html
+++ b/templates/contest/contest_problem.html
@@ -46,6 +46,7 @@
             {% if session["admin"] %}
                 <br><a href="/admin/submissions?contest_id={{ request.path.split("/")[2] }}&problem_id={{ request.path.split("/")[4] }}">View submissions</a>
                 <br><a href="{{ request.path }}/edit">Edit problem</a>
+                <br><a href="{{ request.path }}/export">Export problem</a>
             {% endif %}
         </p>
     </div>
