--- a/templates/problem/problem.html
+++ b/templates/problem/problem.html
@@ -4,6 +4,7 @@
 
 {% block main %}
 <h1>{{ data["name"] }}</h1>
+<div id="confirm" style="cursor: pointer;"></div>
 {% if status %}
     {% if status == "success" %}
         <div class="alert alert-success alert-dismissible fade show" role="alert">
@@ -49,8 +50,19 @@
                 <br><a href="/admin/submissions?problem_id={{ request.path.split("/")[2] }}">View submissions</a>
                 <br><a href="{{ request.path }}/editeditorial">Create/edit editorial</a>
                 <br><a href="{{ request.path }}/edit">Edit problem</a>
+                <br><a href="#" onlick="deletemsg(this)">Delete problem</a>
             {% endif %}
         </p>
     </div>
 </div>
+<script>
+    function deletemsg(e) {
+        var msg = `
+            <div class="alert alert-danger show" role="alert">
+                Are you sure you want to delete this problem? Click this message to confirm.
+            </div>`;
+        $("#confirm").html(msg)
+                     .attr("href", window.location.pathname + "/delete");
+    }
+</script>
 {% endblock %}
