use asset folder instead of static

--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -24,13 +24,13 @@
             <td class="dt">{{ row["join_date"] }}</td>
             <td>
                 <a href="#" onclick="banmsg(this)">
-                    <img src="/static/restrict.svg" onerror="this.src='/static/restrict.png'" class="svg-red icon" title="Ban/Unban user"></img>
+                    <img src="/assets/images/restrict.svg" onerror="this.src='/assets/images/restrict.png'" class="svg-red icon" title="Ban/Unban user"></img>
                 </a>
                 <a href="#" onclick="resetpassmsg(this)">
-                    <img src="/static/key.svg" onerror="this.src='/static/key.png'" class="icon" title="Reset password"></img>
+                    <img src="/assets/images/key.svg" onerror="this.src='/assets/images/key.png'" class="icon" title="Reset password"></img>
                 </a>
                 <a href="#" onclick="adminmsg(this)">
-                    <img src="/static/arrow-up.svg" onerror="this.src='/static/arrow-up.png'" class="svg-green icon" title="Grant/Revoke admin"></img>
+                    <img src="/assets/images/arrow-up.svg" onerror="this.src='/assets/images/arrow-up.png'" class="svg-green icon" title="Grant/Revoke admin"></img>
                 </a>
             </td>
         </tr>
