--- a/templates/contest/contests.html
+++ b/templates/contest/contests.html
@@ -15,7 +15,7 @@
         {{ contest["description"] | safe }}
         {% if session["admin"] %}
             <a href="/admin/editcontest/{{ contest["id"] }}" style="position: absolute; top: 12px; right: 16px; width: 16px;">
-                <img src="/static/pencil.svg" onerror="this.src='/static/pencil.png'">
+                <img src="/assets/images/pencil.svg" onerror="this.src='/assets/images/pencil.png'">
             </a>
         {% endif %}
     </div>
@@ -33,7 +33,7 @@
         {{ contest["description"] | safe }}
         {% if session["admin"] %}
             <a href="/admin/editcontest/{{ contest["id"] }}" style="position: absolute; top: 12px; right: 16px; width: 16px;">
-                <img src="/static/pencil.svg" onerror="this.src='/static/pencil.png'">
+                <img src="/assets/images/pencil.svg" onerror="this.src='/assets/images/pencil.png'">
             </a>
         {% endif %}
     </div>
@@ -51,7 +51,7 @@
         {{ contest["description"] | safe }}
         {% if session["admin"] %}
             <a href="/admin/editcontest/{{ contest["id"] }}" style="position: absolute; top: 12px; right: 16px; width: 16px;">
-                <img src="/static/pencil.svg" onerror="this.src='/static/pencil.png'">
+                <img src="/assets/images/pencil.svg" onerror="this.src='/assets/images/pencil.png'">
             </a>
         {% endif %}
     </div>
