--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" crossorigin="anonymous">
-        <link href="/static/style.css" rel="stylesheet">
+        <link href="/assets/css/style.css" rel="stylesheet">
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
@@ -61,6 +61,6 @@
             <hr>
             <p class="text-center">© 2020, MGCI CTF Club. Source code available <a href="https://github.com/jdabtieu/CTFOJ">here</a>.</p>
         </footer>
-        <script src="/static/dateconvert.js"></script>
+        <script src="/assets/js/dateconvert.js"></script>
     </body>
 </html>
