--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,6 +36,7 @@
                                     <a class="dropdown-item" href="/admin/createcontest">Create Contest</a>
                                     <a class="dropdown-item" href="/admin/createproblem">Create Problem</a>
                                     <a class="dropdown-item" href="/admin/createannouncement">Create Announcement</a>
+                                    <a class="dropdown-item" href="/problems/draft">Draft Problems</a>
                                 </div>
                             </li>
                         {% endif %}
