--- a/templates/forgotpassword.html
+++ b/templates/forgotpassword.html
@@ -4,6 +4,7 @@
 
 {% block main %}
 <h1 class="text-center">Forgot Password</h1>
+{% if get_flashed_messages() %}{% set message = get_flashed_messages()[0] %}{% endif %}
 {% if message %}
     <div class="alert alert-success alert-dismissible fade show" role="alert">
         {{ message }}
