--- a/templates/contest/contests.html
+++ b/templates/contest/contests.html
@@ -14,8 +14,11 @@
         <p class="end dt">{{ contest["end"] }}</p>
         {{ contest["description"] | safe }}
         {% if session["admin"] %}
-            <a href="/admin/editcontest/{{ contest["id"] }}" style="position: absolute; top: 12px; right: 16px; width: 16px;">
-                <img src="/assets/images/pencil.svg" onerror="this.src='/assets/images/pencil.png'">
+            <a href="/admin/editcontest/{{ contest["id"] }}" style="position: absolute; top: 12px; right: 36px;">
+                <img src="/assets/images/pencil.svg" onerror="this.src='/assets/images/pencil.png'" style="width: 16px;">
+            </a>
+            <a href="/admin/deletecontest/{{ contest["id"] }}" style="position: absolute; top: 12px; right: 16px;">
+                <img src="/assets/images/trash.svg" onerror="this.src='/assets/images/trash.png'" style="width: 16px;">
             </a>
         {% endif %}
     </div>
@@ -32,8 +35,11 @@
         <p class="end dt">{{ contest["end"] }}</p>
         {{ contest["description"] | safe }}
         {% if session["admin"] %}
-            <a href="/admin/editcontest/{{ contest["id"] }}" style="position: absolute; top: 12px; right: 16px; width: 16px;">
-                <img src="/assets/images/pencil.svg" onerror="this.src='/assets/images/pencil.png'">
+            <a href="/admin/editcontest/{{ contest["id"] }}" style="position: absolute; top: 12px; right: 36px">
+                <img src="/assets/images/pencil.svg" onerror="this.src='/assets/images/pencil.png'" style="width: 16px;">
+            </a>
+            <a href="/admin/deletecontest/{{ contest["id"] }}" style="position: absolute; top: 12px; right: 16px">
+                <img src="/assets/images/trash.svg" onerror="this.src='/assets/images/trash.png'" style="width: 16px;">
             </a>
         {% endif %}
     </div>
@@ -50,8 +56,11 @@
         <p class="end dt">{{ contest["end"] }}</p>
         {{ contest["description"] | safe }}
         {% if session["admin"] %}
-            <a href="/admin/editcontest/{{ contest["id"] }}" style="position: absolute; top: 12px; right: 16px; width: 16px;">
-                <img src="/assets/images/pencil.svg" onerror="this.src='/assets/images/pencil.png'">
+            <a href="/admin/editcontest/{{ contest["id"] }}" style="position: absolute; top: 12px; right: 36px">
+                <img src="/assets/images/pencil.svg" onerror="this.src='/assets/images/pencil.png'" style="width: 16px;">
+            </a>
+            <a href="/admin/deletecontest/{{ contest["id"] }}" style="position: absolute; top: 12px; right: 16px">
+                <img src="/assets/images/trash.svg" onerror="this.src='/assets/images/trash.png'" style="width: 16px;">
             </a>
         {% endif %}
     </div>
