--- a/templates/index.html
+++ b/templates/index.html
@@ -11,11 +11,11 @@
         <p class="dt">{{ announcement["date"] }}</p>
         {{ announcement["description"] | safe }}
         {% if session["admin"] %}
-        <a href="/admin/editannouncement/{{ announcement["id"] }}" style="position: absolute; top: 12px; right: 36px; width: 16px;">
-            <img src="/assets/images/pencil.svg" onerror="this.src='/assets/images/pencil.png'">
+        <a href="/admin/editannouncement/{{ announcement["id"] }}" style="position: absolute; top: 12px; right: 36px;">
+            <img src="/assets/images/pencil.svg" onerror="this.src='/assets/images/pencil.png'" style="width: 16px;">
         </a>
-        <a aid="{{ announcement["id"] }}" href="#" onclick="deletemsg(this)" style="position: absolute; top: 12px; right: 16px; width: 16px;">
-            <img src="/assets/images/trash.svg" onerror="this.src='/assets/images/trash.png'">
+        <a aid="{{ announcement["id"] }}" href="#" onclick="deletemsg(this)" style="position: absolute; top: 12px; right: 16px;">
+            <img src="/assets/images/trash.svg" onerror="this.src='/assets/images/trash.png'" style="width: 16px;">
         </a>
         {% endif %}
     </div>
