--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,12 +13,12 @@
 
         <link href="/static/favicon.png" rel="icon">
 
-        <title>{% block title %}{% endblock %} | MGCI CTF Club</title>
+        <title>{% block title %}{% endblock %} | {{ CLUB_NAME }}</title>
 
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-primary">
-            <a class="navbar-brand" href="/">MGCI CTF Club</a>
+            <a class="navbar-brand" href="/">{{ CLUB_NAME }}</a>
             <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -61,7 +61,7 @@
         </main>
         <footer>
             <hr>
-            <p class="text-center">© 2020, MGCI CTF Club. Source code available <a href="https://github.com/jdabtieu/CTFOJ">here</a>.</p>
+            <p class="text-center">© 2020, {{ CLUB_NAME }}. Source code available <a href="https://github.com/jdabtieu/CTFOJ">here</a>.</p>
         </footer>
         <script src="/assets/js/dateconvert.js"></script>
     </body>
