--- a/templates/problem/problemeditorial.html
+++ b/templates/problem/problemeditorial.html
@@ -5,6 +5,6 @@
 {% block main %}
 <h1><a href="{{ request.path[:-10] }}">{{ data["name"] }}</a> Editorial</h1>
 <div>
-    {{ data["editorial"] | safe }}
+    {{ ed | safe }}
 </div>
 {% endblock %}
