--- a/templates/contest/contest_problem.html
+++ b/templates/contest/contest_problem.html
@@ -23,11 +23,13 @@
 {% endif %}
 <div class="flex-container">
     <div style="flex: 3; padding: 4px; word-break: break-word;">
-        {{ data["description"] | safe }}
+        <div id=description class="showdown">
+            {{ data["description"] | safe }}
+        </div>
         {% if data["hints"] %}
             <div style="margin-top: 16px;">
                 <a class="btn btn-secondary" id="togglehint" onclick="$('#hint').toggle()">Show/Hide Hints</a>
-                <div id="hint" style="display: none; margin-top: 8px;" class="card">
+                <div id="hint" class="card showdown">
                     {{ data["hints"] | safe }}
                 </div>
             </div>
