--- a/templates/contest/contests.html
+++ b/templates/contest/contests.html
@@ -12,7 +12,9 @@
         <h3><a href="/contest/{{ contest["id"] }}">{{ contest["name"] }}</a></h3>
         <p style="margin-bottom: 0;">Start: <span class="dt">{{ contest["start"] }}</span></p>
         <p style="margin-bottom: 0;">End: <span class="dt">{{ contest["end"] }}</span></p>
-        {{ contest["description"] | safe }}
+        <div class="showdown">
+            {{ contest["description"] | safe }}
+        </div>
         {% if session["admin"] %}
             <a href="/admin/editcontest/{{ contest["id"] }}" style="position: absolute; top: 12px; right: 36px;">
                 <img src="/assets/images/pencil.svg" onerror="this.src='/assets/images/pencil.png'" style="width: 16px;">
@@ -33,7 +35,9 @@
         <h3><a href="/contest/{{ contest["id"] }}">{{ contest["name"] }}</a></h3>
         <p style="margin-bottom: 0;">Start: <span class="dt">{{ contest["start"] }}</span></p>
         <p style="margin-bottom: 0;">End: <span class="dt">{{ contest["end"] }}</span></p>
-        {{ contest["description"] | safe }}
+        <div class="showdown">
+            {{ contest["description"] | safe }}
+        </div>
         {% if session["admin"] %}
             <a href="/admin/editcontest/{{ contest["id"] }}" style="position: absolute; top: 12px; right: 36px">
                 <img src="/assets/images/pencil.svg" onerror="this.src='/assets/images/pencil.png'" style="width: 16px;">
@@ -54,7 +58,9 @@
         <h3><a href="/contest/{{ contest["id"] }}">{{ contest["name"] }}</a></h3>
         <p style="margin-bottom: 0;">Start: <span class="dt">{{ contest["start"] }}</span></p>
         <p style="margin-bottom: 0;">End: <span class="dt">{{ contest["end"] }}</span></p>
-        {{ contest["description"] | safe }}
+        <div class="showdown">
+            {{ contest["description"] | safe }}
+        </div>
         {% if session["admin"] %}
             <a href="/admin/editcontest/{{ contest["id"] }}" style="position: absolute; top: 12px; right: 36px">
                 <img src="/assets/images/pencil.svg" onerror="this.src='/assets/images/pencil.png'" style="width: 16px;">
