--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,9 @@
     <div class="card" style="margin: 16px 0 16px 0;">
         <h3>{{ announcement["name"] }}</h3>
         <p>Posted <span class="dt">{{ announcement["date"] }}</span></p>
-        {{ announcement["description"] | safe }}
+        <div class="showdown">
+            {{ announcement["description"] | safe }}
+        </div>
         {% if session["admin"] %}
         <a href="/admin/editannouncement/{{ announcement["id"] }}" style="position: absolute; top: 12px; right: 36px;">
             <img src="/assets/images/pencil.svg" onerror="this.src='/assets/images/pencil.png'" style="width: 16px;">
