--- a/templates/layout.html
+++ b/templates/layout.html
@@ -63,6 +63,8 @@
             <hr>
             <p class="text-center">© 2020, {{ CLUB_NAME }}. Source code available <a href="https://github.com/jdabtieu/CTFOJ">here</a>.</p>
         </footer>
+        <script src="/assets/js/showdown.min.js"></script>
         <script src="/assets/js/dateconvert.js"></script>
+        <script src="/assets/js/convertmd.js"></script>
     </body>
 </html>
