local jquery as well

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,7 @@
         <link href="/assets/css/github-markdown.css" rel="stylesheet">
         <link href="/assets/css/style.css" rel="stylesheet">
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" crossorigin="anonymous"></script>
+        <script src="/assets/js/jquery.min.js"></script>
         <script src="/assets/js/bootstrap.bundle.min.js"></script>
 
         <link href="/static/favicon.png" rel="icon">
