--- a/templates/problem/problems.html
+++ b/templates/problem/problems.html
@@ -17,7 +17,7 @@
         {% for row in data %}
         <tr>
             <td>
-                {% if data2[row["id"]] %}
+                {% if row["id"] in solved %}
                     <img class="svg-green icon" src="/assets/images/check.svg" onerror="this.src='/assets/images/check.png'"></img>
                 {% else %}
                     <img class="svg-red icon" src="/assets/images/times.svg" onerror="this.src='/assets/images/times.png'"></img>
