--- a/templates/error/maintenance.html
+++ b/templates/error/maintenance.html
@@ -12,12 +12,12 @@
 
         <link href="/static/favicon.png" rel="icon">
 
-        <title>Maintenance | MGCI CTF Club</title>
+        <title>Maintenance | {{ CLUB_NAME }}</title>
 
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-primary">
-            <a class="navbar-brand" href="/">MGCI CTF Club</a>
+            <a class="navbar-brand" href="/">{{ CLUB_NAME }}</a>
             <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -29,7 +29,7 @@
         </main>
         <footer>
             <hr>
-            <p class="text-center">© 2020, MGCI CTF Club. Source code available <a href="https://github.com/jdabtieu/ctf-club/">here</a>.</p>
+            <p class="text-center">© 2020, {{ CLUB_NAME }}. Source code available <a href="https://github.com/jdabtieu/CTFOJ">here</a>.</p>
         </footer>
     </body>
 </html>
