--- a/templates/admin/createproblem.html
+++ b/templates/admin/createproblem.html
@@ -20,7 +20,7 @@
         <div id="description-out" class="md-preview"></div>
     </div>
     <div style="position: relative;">
-        <textarea class="form-control form-group md-preview" id="hints" name="hints" rows="20" placeholder="Hints" required></textarea>
+        <textarea class="form-control form-group md-preview" id="hints" name="hints" rows="20" placeholder="Hints"></textarea>
         <div id="hints-out" class="md-preview"></div>
     </div>
     <input class="form-control form-group" type="number" id="point_value" name="point_value" placeholder="Point Value" required>
