markdown live preview for creation

--- a/templates/admin/createannouncement.html
+++ b/templates/admin/createannouncement.html
@@ -14,8 +14,18 @@
 {% endif %}
 <form autocomplete="off" method="post" id="create" name="create">
     <input class="form-control form-group" type="text" id="name" name="name" placeholder="Name" required>
-    <textarea class="form-control form-group" id="description" name="description" rows="20" placeholder="Description" required></textarea>
+    <div style="position: relative;">
+        <textarea class="form-control form-group md-preview" id="description" name="description" rows="20" placeholder="Description" required></textarea>
+        <div id="description-out" class="md-preview"></div>
+    </div>
     <input class="btn btn-primary" type="submit" id="submit" name="submit" value="Create">
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
+<script>
+    $('#description').bind('input propertychange', function() {
+        var product = converter.makeHtml(this.value);
+        $('#description-out').html(product);
+        $('#description').css('height', $('#description-out').css('height'));
+    });
+</script>
 {% endblock %}
