--- a/templates/problem/editproblem.html
+++ b/templates/problem/editproblem.html
@@ -6,9 +6,37 @@
 <h1>Edit {{ data["name"] }}</h1>
 <form autocomplete="off" method="post">
     <input class="form-control form-group" id="name" name="name" value="{{ data["name"] }}" required>
-    <textarea class="form-control form-group" id="description" name="description" rows="20" placeholder="Description" required>{{ data["description"] }}</textarea>
-    <textarea class="form-control form-group" id="hints" name="hints" rows="10" placeholder="Hints">{{ data["hints"] if data["hints"] }}</textarea>
+    <div style="position: relative;">
+        <textarea class="form-control form-group md-preview" id="description" name="description" rows="20" placeholder="Description" required>{{ data["description"] }}</textarea>
+        <div id="description-out" class="md-preview"></div>
+    </div>
+    <div style="position: relative;">
+        <textarea class="form-control form-group md-preview" id="hints" name="hints" rows="20" placeholder="Hints">{{ data["hints"] if data["hints"] }}</textarea>
+        <div id="hints-out" class="md-preview"></div>
+    </div>
     <input class="btn btn-primary" type="submit" id="submit" name="submit" value="Submit">
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
+<script>
+	$(() => {
+        var product = converter.makeHtml(document.getElementById('description').value);
+        $('#description-out').html(product);
+        $('#description').css('height', $('#description-out').css('height'));
+
+        product = converter.makeHtml(document.getElementById('hints').value);
+        $('#hints-out').html(product);
+        $('#hints').css('height', $('#hints-out').css('height'));
+    });
+
+    $('#description').bind('input propertychange', function() {
+        var product = converter.makeHtml(this.value);
+        $('#description-out').html(product);
+        $('#description').css('height', $('#description-out').css('height'));
+    });
+    $('#hints').bind('input propertychange', function() {
+        var product = converter.makeHtml(this.value);
+        $('#hints-out').html(product);
+        $('#hints').css('height', $('#hints-out').css('height'));
+    });
+</script>
 {% endblock %}
